WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213703
[GTK4] Context menu is misaligned
https://bugs.webkit.org/show_bug.cgi?id=213703
Summary
[GTK4] Context menu is misaligned
Alice Mikhaylenko
Reported
2020-06-28 13:52:16 PDT
It's centered horizontally relative to the pointer. It should be start-aligned.
Attachments
Patch
(1.53 KB, patch)
2020-06-28 13:53 PDT
,
Alice Mikhaylenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alice Mikhaylenko
Comment 1
2020-06-28 13:53:43 PDT
Created
attachment 403009
[details]
Patch
Carlos Garcia Campos
Comment 2
2020-06-29 00:17:36 PDT
Comment on
attachment 403009
[details]
Patch Thanks!
EWS
Comment 3
2020-06-29 00:23:56 PDT
Committed
r263644
: <
https://trac.webkit.org/changeset/263644
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403009
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug