[GTK4] Context menu is misaligned https://bugs.webkit.org/show_bug.cgi?id=213703

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2020-06-29
Reviewed by Carlos Garcia Campos.

Set halign on the context menu popover to the same value other context menus in GTK use,
like in GtkEntry.

* UIProcess/gtk/WebContextMenuProxyGtk.cpp:
(WebKit::createMenuWidget): Set halign for the context menu to 'start'.

Canonical link: https://commits.webkit.org/226509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263644 268f45cc-cd09-0410-ab3c-d52691b4dbfc